--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div style="text-align: center;"><h1>Tic tac toe in React</h1></div>
     <div id="root"></div>
 </body>
 </html>
